[gd_scene load_steps=6 format=2]

[ext_resource path="res://GodPoolGame/TestScenes/UniverseBoundaries.gd" type="Script" id=1]
[ext_resource path="res://JamKit/Feedback/Transform/TransformFeedback2D.gd" type="Script" id=2]
[ext_resource path="res://JamKit/Feedback/FeedbackRunner.gd" type="Script" id=3]
[ext_resource path="res://JamKit/Feedback/Transform/ScaleFeedback2D.gd" type="Script" id=4]
[ext_resource path="res://Assets/test-bg.png" type="Texture" id=5]

[node name="UniverseBoundaries" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.121569, 0, 0.192157, 1 )
texture = ExtResource( 5 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UniverseRoot" type="Node2D" parent="."]

[node name="TopHalf" type="StaticBody2D" parent="UniverseRoot"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UniverseRoot/TopHalf"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 310, 906, 310, 889, 158, 709, 67, 300, 78, 91, 213, 107, 313, 0, 313 )

[node name="BottomHalf" type="StaticBody2D" parent="UniverseRoot"]
position = Vector2( 0, 600 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UniverseRoot/BottomHalf"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 0, -300, 108, -289, 132, -153, 565, -56, 787, -165, 907, -292, 1025, -290, 1027, 0 )

[node name="InnerSpaceMask" type="Polygon2D" parent="UniverseRoot"]
color = Color( 0.466667, 0.294118, 0.545098, 1 )
texture = ExtResource( 5 )
polygon = PoolVector2Array( 907, 306, 791, 436, 562, 545, 133, 449, 89, 217, 297, 79, 708, 67, 889, 157, 905, 305 )

[node name="FeedbackRunner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ScaleFeedback2D" type="Node" parent="FeedbackRunner"]
script = ExtResource( 4 )
TargetPath = NodePath("../../UniverseRoot")
run_time = 0.3
should_return_to_previous = false
change_mode = 1
scale_change = Vector2( 1, 1 )

[node name="TransformFeedback2D" type="Node" parent="FeedbackRunner"]
script = ExtResource( 2 )
TargetPath = NodePath("../../UniverseRoot")
run_time = 0.3
should_return_to_previous = false
change_mode = 1
